# verkeersongevallen

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  make.ps1  pyproject.toml  render.yaml  roadmap.md  start-dev.ps1  tasks.cmd  tasks.sh
backend/app/: __init__.py  a2_bins.py  db.py  geojson.py  main.py  models.py  queries.py  road_bins.py  roads_config.py  static_files.py
backend/app/tests/: test_bins_api.py
config/: app.yml  column_map.generated.yml  column_map.yml
deploy/: docker-entrypoint.sh  fetch_duckdb.sh  showcase.yml
frontend/: .env.development  .env.production.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: AnalyticsPanel.tsx  BottomSheet.tsx  CollapsiblePanel.tsx  Controls.tsx  FilterPanel.tsx  Legend.tsx  MapViewControls.tsx  MobileDock.tsx  RoadSearch.tsx  StatsPanel.tsx  TitleBanner.tsx
frontend/src/hooks/: useMediaQuery.ts
frontend/src/map/: AccidentMap.tsx  bins3d.ts  colors.ts  (+6 more)
scripts/: 00_profile_raw_data.py  01_ingest_to_duckdb.py  02_build_normalized_tables.py  03_build_a2_bins.py  04_validate_a2_outputs.py  05_split_databases.py  _diag_bins.py  _diag_gaps.py  _diag_hm_chain.py
scripts/lib/: __init__.py  config_loader.py  duckdb_helper.py  paths.py  road_normalize.py  text_reader.py
sql/: 00_init.sql  01_ingest_nwb.sql  02_ingest_bron.sql  03_normalize.sql  04_build_a2_bins.sql  05_api_views.sql
sql/queries/: accidents_per_km.sql
